# tree-sitter-embedded-perl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-embedded-perl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_embedded_perl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEmbeddedPerl/: embedded_perl.h
bindings/swift/TreeSitterEmbeddedPerlTests/: TreeSitterEmbeddedPerlTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: embedded_perl.txt
test/highlight/: highlights.ep
