[package]
name = "tree-sitter-embedded-perl"
description = "Embedded Perl templates as used by Mojolicious"
version = "0.1.0"
authors = ["Michael Budde <mbu@jobindex.dk>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "embedded-perl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jobindex-open/tree-sitter-embedded-perl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
